--- a/war/Clusterdash.css
+++ b/war/Clusterdash.css
@@ -1,5 +1,8 @@
 /** Add css rules here for your application. */
 
+body {
+    background-color: black;
+}
 
 /** Example rules used by the template application (remove for your app) */
 h1 {
@@ -31,4 +34,41 @@ h1 {
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
   margin: 15px 6px 6px;
+}
+.chartLabel {
+  color: #005a9b;
+  font-size: 50px;
+  position: relative;
+  left: 200px !important;
+  top: -150px !important;
+  width: 20%;
+  z-index: 1;
+  }
+
+.chartHeaderText {
+  color: #F0F8FF;
+  font-size: 30px;
+  text-align: center;
+}
+
+.chartFooterText {
+  color: #ADD8E6;
+  font-size: 20px;
+  text-align: center;
+}
+
+
+.textChartMeasurement {
+	 color: white;
+	 background-color: #005a9b;
+	 font-size: 200px;
+	 text-align: center;
+	 vertical-align: middle;
+}
+
+.topLevelContainer
+{
+	 background-color: #005a9b;
+	 margin: 10px !important;
+	 padding: 10px;
 }
