--- a/war/Clusterdash.css
+++ b/war/Clusterdash.css
@@ -69,6 +69,6 @@ h1 {
 .topLevelContainer
 {
 	 background-color: #005a9b;
-	 margin: 10px !important;
+	 margin: 10px 5px 10px 5px; !important;
 	 padding: 10px;
 }
