--- a/war/Clusterdash.css
+++ b/war/Clusterdash.css
@@ -43,7 +43,7 @@ body {
 .textChartMeasurement {
 	color: white;
 	background-color: #005a9b;
-	font-size: 150px;
+	font-size: 120px;
 	text-align: center;
 	vertical-align: middle;
 }
@@ -74,4 +74,18 @@ body {
 	text-align: center;
 	font-family: Verdana;
 	margin-top: 1px;
+}
+.hpc3headerPanel
+{
+	background-color: #FFF;
+	width: 1585px;
+}
+
+.hpc3header
+{
+	margin-top: 20px;
+	margin-left: 50px;
+	font-size: 36px;
+	font-family: "Montserrat","Lucida Sans Unicode", "Lucida Grande", sans-serif;	
+	vertical-align: middle;
 }
